# qs2

./: .Rbuildignore  .gitignore  .gitmodules  ChangeLog  DESCRIPTION  Makefile  NAMESPACE  README.md  configure  configure.ac
.github/workflows/: R-CMD-check-mt.yaml  R-CMD-check.yaml  rhub.yaml
R/: RcppExports.R  ascii_encoding.R  documentation.R  generate_test_data.R  qopt.R  qs_cache.R  qs_rds_conversion.R  qs_savem.R  qs_to_rds.R  qx_functions.R  starnames.R  zstd_file_functions.R  zzz.R
inst/analysis/: datasets.R
inst/analysis/benchmarks/: plot_benchmark_results.R  read_timer_function.R  run_benchmarks.R  save_timer_function.R
inst/analysis/benchmarks/results/: ubuntu_serialization_benchmarks_1000genomes_noncoding_vcf.csv  ubuntu_serialization_benchmarks_B_cell_petshopmouse3.csv  ubuntu_serialization_benchmarks_Netflix_Ratings.csv  ubuntu_serialization_benchmarks_ip_location_2023.csv  windows_serialization_benchmarks_1000genomes_noncoding_vcf.csv  windows_serialization_benchmarks_B_cell_petshopmouse3.csv  windows_serialization_benchmarks_Netflix_Ratings.csv  windows_serialization_benchmarks_ip_location_2023.csv
inst/analysis/blockshuffle_xgboost_model/: blockshuffle_heuristic.cpp  blockshuffle_xgboost_model_evaluation.Rmd  blockshuffle_xgboost_model_evaluation.html  blockshuffle_xgboost_model_training.Rmd  blockshuffle_xgboost_model_training.html  convert_xgboost_json.R  xgboost_model_cpp_standalone.cpp
inst/analysis/blocksize_optimization/: blocksize_benchmark_read_timer_function.R  blocksize_optimization.Rmd  blocksize_optimization.html  ubuntu_blocksize_optimization.html
inst/benchmarks/: enwik8_serialization_benchmarks.csv  gaia_serialization_benchmarks.csv  mnist_serialization_benchmarks.csv  parse_data_for_benchmark.R  plot_benchmark_results.R  read_timer_function.R  run_benchmarks.R  save_timer_function.R
inst/benchmarks/results/: mac_benchmark_summary_table.csv  mac_serialization_benchmarks_enwik8.csv  mac_serialization_benchmarks_gaia.csv  mac_serialization_benchmarks_mnist.csv  mac_serialization_benchmarks_tcell.csv  ubuntu_benchmark_summary_table.csv  ubuntu_serialization_benchmarks_enwik8.csv  ubuntu_serialization_benchmarks_gaia.csv  ubuntu_serialization_benchmarks_mnist.csv  ubuntu_serialization_benchmarks_tcell.csv  windows_benchmark_summary_table.csv  windows_serialization_benchmarks_enwik8.csv  windows_serialization_benchmarks_gaia.csv  windows_serialization_benchmarks_mnist.csv  windows_serialization_benchmarks_tcell.csv
inst/include/: qdata_cpp_external.h  qs2_external.h
inst/include/simple_array/: nullable_array.h  simple_array.h  small_array.h  small_nullable_array.h
inst/standalone/: qs2_to_rds.cpp  qs2_to_rds_example.R
man/: blosc_shuffle_raw.Rd  blosc_unshuffle_raw.Rd  decode_source.Rd  encode_source.Rd  generate_test_data.Rd  qd_deserialize.Rd  qd_read.Rd  qd_save.Rd  qd_serialize.Rd  qopt.Rd  qs_cache.Rd  qs_deserialize.Rd  qs_read.Rd  qs_readm.Rd  qs_save.Rd  qs_savem.Rd  qs_serialize.Rd  qs_to_rds.Rd  qx_dump.Rd  rds_to_qs.Rd  starnames.Rd  xxhash_raw.Rd  zstd_compress_bound.Rd  zstd_compress_file.Rd  zstd_compress_raw.Rd  zstd_decompress_file.Rd  zstd_decompress_raw.Rd  zstd_file_functions.Rd  zstd_in_out.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  io.h  qd_constants.h  qd_deserializer.h  qd_serializer.h  qd_unserializer.h  qdata_cpp_external_api.h  qoptions.h  qs2_functions.cpp  qs_deserializer.h  qs_qd_file_headers.h  qs_serializer.h  qs_unserializer.h  qs_unwind_protect.h  qx_dump.h  qx_file_headers.h  qx_functions.cpp  qx_nthreads_guard.h  qx_read_hash.h  qx_unwind_protect.h  r_error_policy.h  u8_literal.h  unwind_protect_implentation.h  zstd_file_functions.h
src/ZSTD/: update.sh  zstd.c  zstd.h
src/ZSTD/patches/: v1.5.7-qs2.patch
src/ascii_encoding/: base85.h  base91.h
src/io/: block_module.h  cvector_module.h  error_policy.h  filestream_module.h  io_common.h  multithreaded_block_module.h  xgboost_blockshuffle_model.h  xxhash_module.h  zstd_file.h  zstd_module.h
tests/: 00_smoke_testing.R  correctness_testing.R  fork_tbb_testing.R  qdata_cpp_external_testing.R  qs_savem_testing.R  utility_testing.R  zz_correctness_testing.R
vignettes/: vignette.html  vignette.rmd
